--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -9,15 +9,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
-        go-version: '1.20' # V2 比较老，用 1.20 比较稳
+        go-version: '1.20'
 
     - name: Set up JDK 17
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
@@ -30,9 +30,7 @@ jobs:
     - name: Build Go Library (AAR)
       run: |
         cd gostlib
-        # 下载依赖
         go mod tidy
-        # 编译 V2 库
         gomobile bind -target=android -o ../app/src/main/libs/gostlib.aar .
 
     - name: Create Gradle Build Files
@@ -48,7 +46,7 @@ jobs:
       run: gradle assembleDebug --no-daemon
 
     - name: Upload APK
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: gost-v2-proxy.apk
         path: app/build/outputs/apk/debug/app-debug.apk
