--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -14,7 +14,8 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.20'
+        go-version: '1.24'    # 这里升级到了 1.24 以配合最新的 gomobile
+        check-latest: true
 
     - name: Set up JDK 17
       uses: actions/setup-java@v4
@@ -30,6 +31,8 @@ jobs:
     - name: Build Go Library (AAR)
       run: |
         cd gostlib
+        # 强制更新 go.mod 到新版本标准，防止报错
+        go mod edit -go=1.24
         go mod tidy
         gomobile bind -target=android -o ../app/src/main/libs/gostlib.aar .
 
