--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -31,14 +31,18 @@ jobs:
     - name: Build Go Library (AAR)
       run: |
         cd gostlib
-        # 强制更新 go.mod 标准
+        # 更新 mod 版本
         go mod edit -go=1.24
         
-        # 【关键修复】手动下载缺失的 bind 依赖包
-        go get golang.org/x/mobile/bind
+        # 【绝杀招】创建一个假文件，强行引用 bind 包，防止被系统清理
+        echo 'package gostlib' > dummy_import.go
+        echo 'import _ "golang.org/x/mobile/bind"' >> dummy_import.go
         
+        # 再次下载并整理
+        go get golang.org/x/mobile/bind
         go mod tidy
-        # 编译库
+        
+        # 开始编译
         gomobile bind -target=android -androidapi 21 -o ../app/src/main/libs/gostlib.aar .
 
     - name: Create Gradle Build Files
