--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -30,59 +30,52 @@ jobs:
 
     - name: Build Go Library (AAR)
       run: |
-        # 1. 重新准备源码目录
+        # 1. 准备源码
         rm -rf gostlib
         mkdir gostlib
-        
-        # 2. 下载 GOST V2 源码
         git clone --depth 1 https://github.com/ginuerzh/gost.git temp_src
-        # 只复制根目录下的核心逻辑文件
         cp temp_src/*.go gostlib/
         rm -rf temp_src
         
         cd gostlib
 
-        # 3. 【核心修复】强制将所有文件的包名改为 gostlib
-        # 解决 found packages gost and gostlib 的错误
+        # 2. 修改包名为 gostlib
         sed -i 's/^package .*/package gostlib/' *.go
 
-        # 4. 创建启动器 wrapper.go
-        # 因为我们改了包名，现在可以直接调用原版代码里的 Run() 函数
+        # 3. 创建启动器 wrapper.go
         cat <<EOW > wrapper.go
         package gostlib
-        
-        import (
-            "flag"
-            "os"
-        )
-        
-        // Start 是给安卓调用的接口
+        import ("flag"; "os")
         func Start(configPath string) {
-            // 重置 flag，防止多次启动报错
             flag.CommandLine = flag.NewFlagSet(os.Args[0], flag.ExitOnError)
-            
-            // 模拟命令行参数：gost -C config.json
             os.Args = []string{"gost", "-C", configPath}
-            
-            // 直接调用 gost 核心的 Run 方法 (它定义在 gost.go 中，现在属于 gostlib 包)
             Run()
         }
         EOW
 
-        # 5. 创建假引用以保留依赖
+        # 4. 创建假引用保活
         echo 'package gostlib' > dummy_import.go
         echo 'import _ "golang.org/x/mobile/bind"' >> dummy_import.go
         
-        # 6. 初始化模块并整理依赖
+        # 5. 【核心修复】初始化并替换失效的依赖地址
         go mod init gostlib
         go mod edit -go=1.24
         
-        # 手动下载必要依赖
+        # 修复 obfs4: 原地址已失效，替换为 Gitlab 新地址
+        go mod edit -replace git.torproject.org/pluggable-transports/obfs4.git=gitlab.com/yawning/obfs4.git@v0.0.0-20231019065609-bc370b284852
+        
+        # 修复 tls-dissector: 库改名了，强制替换为新名字
+        go mod edit -replace github.com/ginuerzh/tls-dissector=github.com/go-gost/tls-dissector@v0.1.0
+        
+        # 修复 quic-go: 锁定一个兼容 V2 的旧版本，防止去下载不兼容的新版
+        go mod edit -replace github.com/lucas-clemente/quic-go=github.com/lucas-clemente/quic-go@v0.28.0
+
+        # 6. 下载依赖
         go get golang.org/x/mobile/bind
-        go get github.com/ginuerzh/gost # 获取项目自身的外部依赖
+        go get github.com/ginuerzh/gost # 获取其他依赖
         go mod tidy
         
-        # 7. 开始编译
+        # 7. 编译
         gomobile bind -target=android -androidapi 21 -o ../app/src/main/libs/gostlib.aar .
 
     - name: Create Gradle Build Files
