--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -39,15 +39,22 @@ jobs:
         
         cd gostlib
 
-        # 2. 【第一刀】修改包名为 gostlib
+        # 2. 【外科手术】删除会导致编译失败的复杂功能文件
+        # 用户只需要 HTTP/SOCKS5，这俩文件是报错源头，直接删
+        rm quic.go obfs.go
+        
+        # 3. 修改包名为 gostlib
         sed -i 's/^package .*/package gostlib/' *.go
 
-        # 3. 【第二刀】源码级替换：将所有死掉的 obfs4 地址替换为 Gitlab 活地址
-        # 这一步直接修改 .go 文件内容，不再依赖 go.mod replace
-        sed -i 's|git.torproject.org/pluggable-transports/obfs4.git|gitlab.com/yawning/obfs4.git|g' *.go
-
-        # 4. 【第三刀】源码级替换：修复 tls-dissector 库改名的问题
-        sed -i 's|github.com/ginuerzh/tls-dissector|github.com/go-gost/tls-dissector|g' *.go
+        # 4. 【关键】注释掉代码中所有引用 quic 和 obfs 的地方
+        # 这一步会把所有涉及 quic/obfs 的代码行变成注释，防止 Go 编译器报错
+        sed -i 's/.*quic\..*/\/\/ &/' *.go
+        sed -i 's/.*obfs\..*/\/\/ &/' *.go
+        
+        # 修复 imports (删除未使用的 import)
+        # 因为我们注释掉了代码，引用也没用了，用 goimports 清理一下最稳，但这里我们用 brute force
+        # 简单粗暴替换掉 github.com/lucas-clemente/quic-go 防止编译器去下载它
+        sed -i 's|github.com/lucas-clemente/quic-go|runtime|g' *.go
 
         # 5. 创建启动器 wrapper.go
         cat <<EOW > wrapper.go
@@ -64,23 +71,20 @@ jobs:
         echo 'package gostlib' > dummy_import.go
         echo 'import _ "golang.org/x/mobile/bind"' >> dummy_import.go
         
-        # 7. 初始化 Go Module
+        # 7. 初始化 Module
         go mod init gostlib
         go mod edit -go=1.24
         
-        # 8. 【关键】锁定旧版依赖
-        # quic-go 必须用旧版 (v0.28.0) 才能兼容 GOST V2 的代码
-        go mod edit -replace github.com/lucas-clemente/quic-go=github.com/lucas-clemente/quic-go@v0.28.0
+        # 8. 锁定 relay 版本 (解决 req.Flags undefined 问题)
+        # 必须强制使用 v0.1.1 这种老版本，新版本改了 API
+        go mod edit -replace github.com/go-gost/relay=github.com/go-gost/relay@v0.1.1
         
-        # 9. 手动下载修改后的依赖
-        go get gitlab.com/yawning/obfs4.git
-        go get github.com/go-gost/tls-dissector
+        # 下载依赖
         go get golang.org/x/mobile/bind
-        
-        # 自动整理剩余依赖
+        go get github.com/ginuerzh/gost
         go mod tidy
         
-        # 10. 编译
+        # 9. 编译
         gomobile bind -target=android -androidapi 21 -o ../app/src/main/libs/gostlib.aar .
 
     - name: Create Gradle Build Files
