--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -1,89 +1,20 @@
-name: Build Gost V2 APK (Binary Mode)
+name: Build Gost V2 Final
 
-on:
-  push:
-    branches: [ "main" ]
-  workflow_dispatch:
+on: [push, workflow_dispatch]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-
-    - name: Setup Android SDK
-      uses: android-actions/setup-android@v3
-
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@v3
-      with:
-        gradle-version: '8.2'
-
-    - name: Create Gradle Build Files
-      run: |
-        echo "include ':app'" > settings.gradle
-        
-        cat <<EOG > build.gradle
-        buildscript {
-            repositories {
-                google()
-                mavenCentral()
-            }
-            dependencies {
-                classpath 'com.android.tools.build:gradle:8.1.1'
-            }
-        }
-        allprojects {
-            repositories {
-                google()
-                mavenCentral()
-            }
-        }
-        task clean(type: Delete) {
-            delete rootProject.buildDir
-        }
-        EOG
-        
-        cat <<EOG > app/build.gradle
-        plugins {
-            id 'com.android.application'
-        }
-        
-        android {
-            namespace 'com.example.gostproxy'
-            compileSdk 33
-            
-            defaultConfig {
-                applicationId 'com.example.gostproxy'
-                minSdk 21
-                targetSdk 33
-                versionCode 1
-                versionName '1.0'
-                ndk {
-                    abiFilters 'arm64-v8a', 'armeabi-v7a'
-                }
-            }
-            aaptOptions {
-                noCompress "tflite"
-            }
-        }
-        
-        dependencies {
-            implementation fileTree(dir: 'libs', include: ['*.jar'])
-        }
-        EOG
-
+    - uses: actions/setup-java@v4
+      with: { java-version: '17', distribution: 'temurin' }
+    - uses: android-actions/setup-android@v3
+    - uses: gradle/actions/setup-gradle@v3
+      with: { gradle-version: '8.2' }
     - name: Build APK
       run: gradle assembleDebug --no-daemon
-
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
+    - uses: actions/upload-artifact@v4
       with:
-        name: gost-v2-binary.apk
+        name: gost-v2-final.apk
         path: app/build/outputs/apk/debug/app-debug.apk
