Downgrade targetSdk to 28 and add log view

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,17 @@
-plugins { id 'com.android.application' }
+plugins {
+    id 'com.android.application'
+}
+
 android {
     namespace 'com.example.gostproxy'
-    compileSdk 33
+    compileSdk 33 
+    
     defaultConfig {
         applicationId 'com.example.gostproxy'
         minSdk 21
-        targetSdk 33
-        versionCode 2
-        versionName '2.0'
+        // 【关键修复】降级到 28，允许在 Android 10/11/12/13 上执行二进制文件
+        targetSdk 28 
+        versionCode 3
+        versionName '3.0'
     }
 }
